--- a/css/Evolve.css
+++ b/css/Evolve.css
@@ -48,7 +48,7 @@ li {
  font-size: 18px;
 }
 .menu li:hover {
- background-color: #4c9e9e;
+ background-color: #4c9e9ec7;
  border-radius: 5px;
  transition: 0.3s ease;
 }
@@ -81,7 +81,7 @@ input[type=checkbox]{
 }
 .menu li:hover {
  display: inline-block;
- background-color:#4c9e9e;
+ background-color:#4c9e9ec7;
  transition: 0.3s ease;
 }
 .menu li + li {
