--- a/css/Evolve.css
+++ b/css/Evolve.css
@@ -224,7 +224,9 @@ ul.social-footer2 li a:hover {background-color:#ff8d1e;}
 ul.social-footer2 li a {
   display: block; height:30px;width: 30px;text-align: center;
 }
-
+.btn{
+    background-color: #ff8d1e; color:#fff;
+}
 .btn:hover, .btn:focus, .btn.active {
     background: #4b92dc;color: #fff;
     -webkit-box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
