--- a/css/Evolve.css
+++ b/css/Evolve.css
@@ -11,8 +11,10 @@ html {
 }
 
 body {
-  box-sizing: border-box;
- font-family: monospace;
+   box-sizing: border-box;
+  font-family: monospace;
+  background-color: #eee;
+
 }
 
 
@@ -52,7 +54,7 @@ li {
  font-size: 18px;
 }
 .menu li:hover {
- background-color: #4c9e9ec7;
+ background-color: #0d6efd;
  border-radius: 5px;
  transition: 0.3s ease;
 }
@@ -85,7 +87,7 @@ input[type=checkbox]{
 }
 .menu li:hover {
  display: inline-block;
- background-color:#4c9e9ec7;
+ background-color:#0d6efd;
  transition: 0.3s ease;
 }
 .menu li + li {
@@ -148,9 +150,7 @@ input[type=checkbox]:checked ~ .menu{
   font-size: 1.2rem;
   text-transform: capitalize;
 }
-.carousel .slide {
-  margin: 0 -20%;
-}
+
 .carousel-inner {
   height: 60vh;
 }
@@ -161,6 +161,12 @@ input[type=checkbox]:checked ~ .menu{
   width: 60%;
   margin: 0 20%;
 }
+
+/* Main */
+.row {
+  padding: 5rem 5rem;
+}
+
 
 /* Main Footer */
 footer .main-footer{  padding: 20px 0;  background: #252525;}
@@ -239,13 +245,14 @@ ul.social-footer2 li a {
 
 }
 
-popup {
+.popup {
   height: 100vh;
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.8);
+  background-size: cover;
   z-index: 9999;
   opacity: 0;
   visibility: hidden;
@@ -258,7 +265,10 @@ popup {
   transform: translate(-50%, -50%);
   width: 75%;
   height: 50rem;
-  background-color: #fff;
+  background-image: linear-gradient(to right, rgba(17, 17, 17, 0.329), rgba(0, 0, 0, 0.26)), url(../image/close-wardrope.jpeg);
+  background-size: cover;
+  color: #fff;
+  padding: 2rem 7rem;
   box-shadow: 0 2rem 4rem rgba;
   border-radius: 3px;
   display: table;
@@ -288,4 +298,31 @@ popup {
 .popup__close:hover {
   color: #28b485;
 }
-
+.heading-tertiary {
+  text-transform: uppercase;
+}
+.form-control {
+  background-color: rgba(255, 255, 255, 0.4) !important;
+  border: none;
+  margin-bottom: 1.3rem;
+}
+.field-icon {
+  float: right;
+  margin-left: -25px;
+  margin-top: -25px;
+  position: relative;
+  z-index: 2;
+}
+.form-control::placeholder {
+  color: #eee;
+}
+.form-check {
+  display: inline-block;
+  margin: 1rem  auto;
+}
+.btn--blue {
+  border: 1px solid #000;
+  color: white;
+  text-align: end;
+  padding: 10px 20px;
+}
