--- a/css/Evolve.css
+++ b/css/Evolve.css
@@ -290,7 +290,7 @@ ul.social-footer2 li a {
   transform: translate(-50%, -50%) scale(1);
 }
 .popup__close:link, .popup__close:visited {
-  color: #777;
+  color: #f5eeee;
   position: absolute;
   top: 2.5rem;
   right: 2.5rem;
