--- a/css/Evolve.css
+++ b/css/Evolve.css
@@ -311,9 +311,10 @@ ul.social-footer2 li a {
 }
 .form-control {
   background-color: rgba(255, 255, 255, 0.4) !important;
-  border: none;
-  margin-bottom: 1.3rem;
 }
+.form-field {
+  margin-bottom: 1.3rem;
+} 
 .form-field .success input{
   border-color:#09c372 !important;
 } 
