--- a/css/Evolve.css
+++ b/css/Evolve.css
@@ -275,6 +275,7 @@ ul.social-footer2 li a {
   background-image: linear-gradient(to right, rgba(54, 54, 56, 0.796), rgba(61, 61, 61, 0.824)), url(../image/close-wardrope.jpeg);
   background-size: cover;
   color: #fff;
+  letter-spacing: 0.15rem;
   padding: 2rem 7rem;
   box-shadow: 0 2rem 4rem rgba;
   border-radius: 3px;
@@ -319,19 +320,22 @@ ul.social-footer2 li a {
   border-color: #09c372 !important;
 } 
 .form-field .error input{
-  border-color: #ff0000 !important;
+  border-color: #f99b3a !important;
 } 
 .form-field .error {
-  color: #ff0000;
+  color: #f99b3a;
   font-size: 9px;
   height: 3px;
 } 
 .field-icon {
-  float: right;
-  margin-left: -25px;
-  margin-top: -20px;
-  position: relative;
-  z-index: 2;
+  position: absolute;
+  right: 80px;
+  transform: translate(0, -70%);
+  cursor: pointer;
+}
+.fa-solid .fa-eye {
+  font-size: 20px;
+  color: #ffffff;
 }
 .form-control::placeholder {
   color: #eee;
