--- a/css/Evolve.css
+++ b/css/Evolve.css
@@ -333,7 +333,7 @@ ul.social-footer2 li a {
   transform: translate(0, -40%);
   cursor: pointer;
 }
-.fa-solid .fa-eye {
+.fa-eye {
   font-size: 30px;
   color: #ffffff;
 }
